--- a/source/index.html
+++ b/source/index.html
@@ -11,11 +11,11 @@
 <body class="page-body">
   <header class="header">
     <picture>
-      <source media="(min-width: 1440px)" width="130" height="26" type="image/svg+xml"
-        srcset="images/logo/drink2go-logo-desktop.svg">
+      <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
+        srcset="img/logo/supergym-logo-desktop.svg">
       <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
-        srcset="images/logo/drink2go-logo-tablet.svg">
-      <img class="header__logo-icon logo" src="images/logo/drink2go-logo-mobile.svg" width="100" height="20"
+        srcset="img/logo/supergym-logo-tablet.svg">
+      <img class="header__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
         alt="Логотип SUPERGYM">
     </picture>
     <a class="header__phone-link" href="tel:+78005555555">8 (800) 555-55-55</a>
@@ -30,12 +30,16 @@
       <p class="hero__text">Кардио-зона</p>
       <a class="hero__buy button" href="#">Купить абонемент</a>
       <picture>
-        <source media="(min-width: 1440px)" width="170" height="36" type="image/svg+xml"
-          srcset="images/logo/drink2go-logo-desktop.svg">
-        <source media="(min-width: 768px)" width="82" height="36" type="image/svg+xml"
-          srcset="images/logo/drink2go-logo-tablet.svg">
-        <img class="hero__image" src="images/logo/drink2go-logo-mobile.svg" width="32" height="36"
-          alt="Фотография тренера">
+        <source media="(min-width: 1366px)" width="500" height="524" type="image/webp"
+          srcset="img/hero/athlete-desktop@1x.webp 1x, img/hero/athlete-desktop@2x.webp 2x">
+        <source media="(min-width: 768px)" width="324" height="390" type="image/webp"
+          srcset="img/hero/athlete-tablet@1x.webp 1x, img/hero/athlete-tablet@2x.webp 2x">
+
+        <source media="(min-width: 1366px)" width="500" height="524" type="image/jpg"
+          srcset="img/hero/athlete-desktop@1x.jpg 1x, img/hero/athlete-desktop@2x.jpg 2x">
+        <source media="(min-width: 768px)" width="324" height="390" type="image/jpg"
+          srcset="img/hero/athlete-tablet@1x.jpg 1x, img/hero/athlete-tablet@2x.jpg 2x">
+        <img class="about__image" src="#" width="100" height="100" alt="Фотография тренера">
       </picture>
     </section>
 
@@ -43,19 +47,24 @@
       <h2 class="about__title">Тренажерный зал</h2>
       <p class="about__text">Просторный зал площадью 900 кв/м</p>
       <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
-        тела и здоровья. Тренажёрный
-        зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
+        тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
       <p class="about__description">В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами.
-        Также в фитнес центре
-        есть несколько оборудованных залов для различных видов групповых занятий.</p>
+        Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
       <picture>
-        <source media="(min-width: 1440px)" width="170" height="36" type="image/svg+xml"
-          srcset="images/logo/drink2go-logo-desktop.svg">
-        <source media="(min-width: 768px)" width="82" height="36" type="image/svg+xml"
-          srcset="images/logo/drink2go-logo-tablet.svg">
-        <img class="about__image" src="images/logo/drink2go-logo-mobile.svg" width="32" height="36"
-          alt="Фотография тренера">
+        <source media="(min-width: 1366px)" width="660" height="400" type="image/webp"
+          srcset="img/about/gym-desktop@1x.webp 1x, img/about/gym-desktop@2x.webp 2x">
+        <source media="(min-width: 768px)" width="678" height="345" type="image/webp"
+          srcset="img/about/gym-tablet@1x.webp 1x, img/about/gym-tablet@2x.webp 2x">
+          <source width="320" height="280" type="image/webp"
+          srcset="img/about/gym-mobile@1x.webp 1x, img/about/gym-mobile@2x.webp 2x">
+
+        <source media="(min-width: 1366px)" width="660" height="400" type="image/jpg"
+          srcset="img/about/gym-desktop@1x.jpg 1x, img/about/gym-desktop@2x.jpg 2x">
+        <source media="(min-width: 768px)" width="678" height="345" type="image/jpg"
+          srcset="img/about/gym-tablet@1x.jpg 1x, img/about/gym-tablet@2x.jpg 2x">
+        <img class="about__image" src="img/about/gym-mobile@1x.jpg" width="320" height="280" srcset="img/about/gym-mobile@2x.jpg" alt="Фотография тренажерного зала">
       </picture>
+
       <iframe class="about__video" title="Видео о тренажерном зале"
         src="https://www.youtube.com/watch?v=9TZXsZItgdw"></iframe>
     </section>
@@ -112,7 +121,21 @@
 
       <a class="games__application button" href="#">Заполнить заявку</a>
 
-      <img class="games__image" src="#" width="32" height="36" alt="Фотография спортсмена на мероприятии Super Games">
+      <picture>
+        <source media="(min-width: 1366px)" width="660" height="500" type="image/webp"
+          srcset="img/games/man-in-game-desktop@1x.webp 1x, img/games/man-in-game-desktop@2x.webp 2x">
+        <source media="(min-width: 768px)" width="378" height="348" type="image/webp"
+          srcset="img/games/man-in-game-tablet@1x.webp 1x, img/games/man-in-game-tablet@2x.webp 2x">
+        <source width="290" height="290" type="image/webp"
+          srcset="img/games/man-in-game-mobile@1x.webp 1x, img/games/man-in-game-mobile@2x.webp 2x">
+
+        <source media="(min-width: 1366px)" width="660" height="500" type="image/jpg"
+          srcset="img/games/man-in-game-desktop@1x.jpg 1x, img/games/man-in-game-desktop@2x.jpg 2x">
+        <source media="(min-width: 768px)" width="378" height="348" type="image/jpg"
+          srcset="img/games/man-in-game-tablet@1x.jpg 1x, img/games/man-in-game-tablet@2x.jpg 2x">
+        <img class="games__image" src="img/games/man-in-game-mobile@1x.jpg" width="290" height="290"
+          srcset="img/games/man-in-game-mobile@2x.jpg" alt="Фотография спортсмена на мероприятии Super Games">
+      </picture>
     </section>
 
     <section class="juri" data-test="juri">
@@ -222,7 +245,22 @@
           <p class="offers__card-description offers__main-card-description">Безлимитный абонемент в тренажёрный зал</p>
           <a class="offers__details offers__main-card-details" href="#">Подробнее</a>
         </div>
-        <img class="offers__image" src="#" width="32" height="36" alt="Фотография девушки в спортивной форме">
+
+        <picture>
+          <source media="(min-width: 1366px)" width="280" height="460" type="image/webp"
+            srcset="img/offers/girl-desktop@1x.webp 1x, img/offers/girl-desktop@2x.webp 2x">
+          <source media="(min-width: 768px)" width="400" height="462" type="image/webp"
+            srcset="img/offers/girl-tablet@1x.webp 1x, img/offers/girl-tablet@2x.webp 2x">
+          <source width="320" height="360" type="image/webp"
+            srcset="img/offers/girl-mobile@1x.webp 1x, img/offers/girl-mobile@2x.webp 2x">
+
+          <source media="(min-width: 1366px)" width="280" height="460" type="image/jpg"
+            srcset="img/offers/girl-desktop@1x.jpg 1x, img/offers/girl-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" width="400" height="462" type="image/jpg"
+            srcset="img/offers/girl-tablet@1x.jpg 1x, img/offers/girl-tablet@2x.jpg 2x">
+          <img class="offers__image" src="img/offers/girl-mobile@1x.jpg" width="320" height="360"
+            srcset="img/offers/girl-mobile@2x.jpg" alt="Фотография девушки в спортивной форме">
+        </picture>
       </article>
 
       <article class="offers__card">
@@ -410,11 +448,11 @@
 
   <footer class="footer" data-test="footer">
     <picture>
-      <source media="(min-width: 1440px)" width="130" height="26" type="image/svg+xml"
-        srcset="images/logo/drink2go-logo-desktop.svg">
+      <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
+        srcset="img/logo/supergym-logo-desktop.svg">
       <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
-        srcset="images/logo/drink2go-logo-tablet.svg">
-      <img class="footer__logo-icon logo" src="images/logo/drink2go-logo-mobile.svg" width="100" height="20"
+        srcset="img/logo/supergym-logo-tablet.svg">
+      <img class="footer__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
         alt="Логотип SUPERGYM">
     </picture>
 
