fix: remove classes that cannot be added according to the specifications

--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
     <a class="header__phone-link" href="tel:+78005555555">8 (800) 555-55-55</a>
   </header>
 
-  <main class="page-main">
+  <main>
     <section class="hero" data-test="hero">
       <p class="hero__location">Омск</p>
       <h1 class="hero__title">Фитнес-центр</h1>
@@ -46,23 +46,24 @@
     <section class="about" data-test="about">
       <h2 class="about__title">Тренажерный зал</h2>
       <p class="about__text">Просторный зал площадью 900 кв/м</p>
-      <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
+      <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
         тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
-      <p class="about__description">В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами.
+      <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами.
         Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
       <picture>
         <source media="(min-width: 1366px)" width="660" height="400" type="image/webp"
           srcset="img/about/gym-desktop@1x.webp 1x, img/about/gym-desktop@2x.webp 2x">
         <source media="(min-width: 768px)" width="678" height="345" type="image/webp"
           srcset="img/about/gym-tablet@1x.webp 1x, img/about/gym-tablet@2x.webp 2x">
-          <source width="320" height="280" type="image/webp"
+        <source width="320" height="280" type="image/webp"
           srcset="img/about/gym-mobile@1x.webp 1x, img/about/gym-mobile@2x.webp 2x">
 
         <source media="(min-width: 1366px)" width="660" height="400" type="image/jpg"
           srcset="img/about/gym-desktop@1x.jpg 1x, img/about/gym-desktop@2x.jpg 2x">
         <source media="(min-width: 768px)" width="678" height="345" type="image/jpg"
           srcset="img/about/gym-tablet@1x.jpg 1x, img/about/gym-tablet@2x.jpg 2x">
-        <img class="about__image" src="img/about/gym-mobile@1x.jpg" width="320" height="280" srcset="img/about/gym-mobile@2x.jpg" alt="Фотография тренажерного зала">
+        <img class="about__image" src="img/about/gym-mobile@1x.jpg" width="320" height="280"
+          srcset="img/about/gym-mobile@2x.jpg" alt="Фотография тренажерного зала">
       </picture>
 
       <iframe class="about__video" title="Видео о тренажерном зале"
@@ -190,49 +191,49 @@
     <section class="features" data-test="features">
       <h2 class="features__title">Наши преимущества</h2>
       <ul class="features__list">
-        <li class="features__item">
-          <div class="features__container">
-            <span class="features__number">900</span>
-            <span class="features__measure">кв/м</span>
+        <li>
+          <div>
+            <span>900</span>
+            <span>кв/м</span>
           </div>
-          <h3 class="features__item-title">Площадь</h3>
-          <p class="features__description">Занимайтесь без очередей и толкучки</p>
+          <h3>Площадь</h3>
+          <p>Занимайтесь без очередей и толкучки</p>
         </li>
 
-        <li class="features__item">
-          <div class="features__container">
-            <span class="features__number">900</span>
-            <span class="features__measure">кв/м</span>
+        <li>
+          <div>
+            <span>900</span>
+            <span>кв/м</span>
           </div>
-          <h3 class="features__item-title">Площадь</h3>
-          <p class="features__description">Занимайтесь без очередей и толкучки</p>
+          <h3>Площадь</h3>
+          <p>Занимайтесь без очередей и толкучки</p>
         </li>
 
-        <li class="features__item features__item--selected">
-          <div class="features__container">
-            <span class="features__number">100</span>
-            <span class="features__measure">тренажеров</span>
+        <li>
+          <div>
+            <span>100</span>
+            <span>тренажеров</span>
           </div>
-          <h3 class="features__item-title visually-hidden">Много тренажеров</h3>
-          <p class="features__description">Современные тренажёры на все группы мышц</p>
+          <h3>Много тренажеров</h3>
+          <p>Современные тренажёры на все группы мышц</p>
         </li>
 
-        <li class="features__item">
-          <div class="features__container">
-            <span class="features__number">350</span>
-            <span class="features__measure">мест</span>
+        <li>
+          <div>
+            <span>350</span>
+            <span>мест</span>
           </div>
-          <h3 class="features__item-title">Комфорт</h3>
-          <p class="features__description">Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+          <h3>Комфорт</h3>
+          <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
         </li>
 
-        <li class="features__item">
-          <div class="features__container">
-            <span class="features__number">5+</span>
-            <span class="features__measure">лет</span>
+        <li>
+          <div>
+            <span>5+</span>
+            <span>лет</span>
           </div>
-          <h3 class="features__item-title">Тренерский опыт</h3>
-          <p class="features__description">Добивайтесь своих целей быстрее с профессиональным тренером</p>
+          <h3>Тренерский опыт</h3>
+          <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
         </li>
       </ul>
     </section>
@@ -240,9 +241,11 @@
     <section class="offers" data-test="offers">
       <h2 class="offers__title">Акции</h2>
       <article class="offers__main-card">
-        <div class="offers__text-container">
-          <h3 class="offers__main-card-title">Год <span class="offers__main-card-price">4999</span></h3>
-          <p class="offers__card-description offers__main-card-description">Безлимитный абонемент в тренажёрный зал</p>
+        <div class="offers__container">
+          <div class="offers__text-container">
+            <h3>Год <span>4999</span></h3>
+            <p>Безлимитный абонемент в тренажёрный зал</p>
+          </div>
           <a class="offers__details offers__main-card-details" href="#">Подробнее</a>
         </div>
 
@@ -264,14 +267,18 @@
       </article>
 
       <article class="offers__card">
-        <h3 class="offers__card-title">Месяц бесплатно</h3>
-        <p class="offers__card-description">Приведи друга, получи абонемент в подарок</p>
+        <div class="offers__text-container">
+          <h3>Месяц бесплатно</h3>
+          <p>Приведи друга, получи абонемент в подарок</p>
+        </div>
         <a class="offers__details" href="#">Подробнее</a>
       </article>
 
       <article class="offers__card">
-        <h3 class="offers__card-title">Скидка 20%</h3>
-        <p class="offers__card-description">Корпоративный фитнес с командой</p>
+        <div class="offers__text-container">
+          <h3>Скидка 20%</h3>
+          <p>Корпоративный фитнес с командой</p>
+        </div>
         <a class="offers__details" href="#">Подробнее</a>
       </article>
     </section>
@@ -287,92 +294,92 @@
         </ul>
         <div class="faq__tab-content">
           <div class="faq__tab-pane active" id="tab1">
-            <details class="faq__item" open>
-              <summary class="faq__question">Как стать членом фитнес-центра?</summary>
-              <p class="faq__answer">При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать
+            <details open>
+              <summary>Как стать членом фитнес-центра?</summary>
+              <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать
                 договор. При покупке
                 абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Где можно посмотреть расписание?</summary>
-              <p class="faq__answer">Вы можете ознакомиться с расписание на стойке информации, на нашем официальном
+            <details>
+              <summary>Где можно посмотреть расписание?</summary>
+              <p>Вы можете ознакомиться с расписание на стойке информации, на нашем официальном
                 сайте.
                 Так же есть
                 возможность оформить подписку на наши новости и получать расписание и обновления на почту каждую неделю.
               </p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Есть кулеры в центре? Предоставляются полотенца?</summary>
-              <p class="faq__answer">ллл</p>
+            <details>
+              <summary>Есть кулеры в центре? Предоставляются полотенца?</summary>
+              <p>ллл</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Сколько тренеров работает в клубе и какова их квалификация?</summary>
-              <p class="faq__answer">ююю</p>
+            <details>
+              <summary>Сколько тренеров работает в клубе и какова их квалификация?</summary>
+              <p>ююю</p>
             </details>
           </div>
           <div class="tab-pane" id="tab2">
-            <details class="faq__item" open>
-              <summary class="faq__question">Занятия с тренером входят в абонемент?</summary>
-              <p class="faq__answer">При посещении тренажерного зала вам необходимо оплатить занятия с тренером
+            <details open>
+              <summary>Занятия с тренером входят в абонемент?</summary>
+              <p>При посещении тренажерного зала вам необходимо оплатить занятия с тренером
                 отдельно.
                 В зале всегда присутствует дежурный тренер, которому можно задать вопрос, получить небольшую
                 консультацию
                 по тренажеру или технике выполнения упражнения.</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Можно ли заморозить абонемент?</summary>
-              <p class="faq__answer">ююю</p>
+            <details>
+              <summary>Можно ли заморозить абонемент?</summary>
+              <p>ююю</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Есть ли лимит по посещениям тренажерного зала и групповых занятий?
+            <details>
+              <summary>Есть ли лимит по посещениям тренажерного зала и групповых занятий?
               </summary>
-              <p class="faq__answer">ллл</p>
+              <p>ллл</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Что такое семейный доступ и доступ для друзей?</summary>
-              <p class="faq__answer">ююю</p>
+            <details>
+              <summary>Что такое семейный доступ и доступ для друзей?</summary>
+              <p>ююю</p>
             </details>
           </div>
           <div class="tab-pane" id="tab3">
-            <details class="faq__item" open>
-              <summary class="faq__question">Предлагает ли клуб услуги по консультированию по вопросам питания?
+            <details open>
+              <summary>Предлагает ли клуб услуги по консультированию по вопросам питания?
               </summary>
-              <p class="faq__answer">Да. Вы можете обратиться как к своему тренеру, так и к нашему нутрициологу.
+              <p>Да. Вы можете обратиться как к своему тренеру, так и к нашему нутрициологу.
                 Специалист уточнит ваши данные, цели и предложит программу питания.</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Проводятся ли в клубе какие-либо мероприятия  или соревнования?</summary>
-              <p class="faq__answer">ююю</p>
+            <details>
+              <summary>Проводятся ли в клубе какие-либо мероприятия  или соревнования?</summary>
+              <p>ююю</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Можно ли приобрести в центре спортивное питание?</summary>
-              <p class="faq__answer">ллл</p>
+            <details>
+              <summary>Можно ли приобрести в центре спортивное питание?</summary>
+              <p>ллл</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Есть ли в центре детская комната?</summary>
-              <p class="faq__answer">ююю</p>
+            <details>
+              <summary>Есть ли в центре детская комната?</summary>
+              <p>ююю</p>
             </details>
           </div>
           <div class="tab-pane" id="tab4">
-            <details class="faq__item" open>
-              <summary class="faq__question">Есть в фитнес-центре дресс-код?</summary>
-              <p class="faq__answer">Для тренировок необходимо иметь предназначенную для этого закрытую спортивную обувь
+            <details open>
+              <summary>Есть в фитнес-центре дресс-код?</summary>
+              <p>Для тренировок необходимо иметь предназначенную для этого закрытую спортивную обувь
                 и
                 одежду. Верхняя и нижняя части тела должны быть закрыты (используйте футболки, майки, спортивные брюки,
                 шорты, кроссовки). В целях безопасности, запрещается тренироваться босиком, в пляжных или домашних
                 тапочках и т. п., исключения составляют специальные классы (например, йога, пилатес).</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Можно ли приводить с собой детей на тренировки?</summary>
-              <p class="faq__answer">ююю</p>
+            <details>
+              <summary>Можно ли приводить с собой детей на тренировки?</summary>
+              <p>ююю</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Какие дополнительные правила посещения центра?</summary>
-              <p class="faq__answer">ллл</p>
+            <details>
+              <summary>Какие дополнительные правила посещения центра?</summary>
+              <p>ллл</p>
             </details>
-            <details class="faq__item">
-              <summary class="faq__question">Нужна ли медицинская справка для посещения залов и бассейна?</summary>
-              <p class="faq__answer">ююю</p>
+            <details>
+              <summary>Нужна ли медицинская справка для посещения залов и бассейна?</summary>
+              <p>ююю</p>
             </details>
           </div>
         </div>
@@ -385,19 +392,19 @@
         <div class="reviews__slider">
           <ul>
             <li class="reviews__card">
-              <h3 class="reviews__title">Анна Орлова</h3>
-              <blockquote class="reviews__text">«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто,
+              <h3>Анна Орлова</h3>
+              <blockquote>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто,
                 тренажёры обновляют,
                 персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</blockquote>
             </li>
             <li class="reviews__card">
-              <h3 class="reviews__title">Олег Попов</h3>
-              <blockquote class="reviews__text">«Хожу в Supergym больше 6 лет, всегда чистые раздевалки, просторный зал,
+              <h3>Олег Попов</h3>
+              <blockquote>«Хожу в Supergym больше 6 лет, всегда чистые раздевалки, просторный зал,
                 нет толкучки, удобная локация. Я доволен!»</blockquote>
             </li>
             <li class="reviews__title">
-              <h3 class="reviews__name">Артем Алексеев</h3>
-              <blockquote class="reviews__text">«Нравится спортзал, всегда проходят интересные мероприятия, в которых я
+              <h3>Артем Алексеев</h3>
+              <blockquote>«Нравится спортзал, всегда проходят интересные мероприятия, в которых я
                 люблю поучаствовать. Лучший зал, в который я ходил»</blockquote>
             </li>
           </ul>
