feat: add header block styles (mobile, tablet, desktop)

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
 
 <body class="page-body">
   <header class="header">
+    <div class="header-container">
     <picture>
       <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
         srcset="img/logo/supergym-logo-desktop.svg">
@@ -18,7 +19,8 @@
       <img class="header__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
         alt="Логотип SUPERGYM">
     </picture>
-    <a class="header__phone-link" href="tel:+78005555555">8 (800) 555-55-55</a>
+    <a class="header__phone-link" href="tel:+78005555555">8 800 555-55-55</a>
+  </div>
   </header>
 
   <main>
