--- a/source/index.html
+++ b/source/index.html
@@ -11,47 +11,58 @@
 <body class="page-body">
   <header class="header">
     <div class="header-container">
-    <picture>
-      <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
-        srcset="img/logo/supergym-logo-desktop.svg">
-      <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
-        srcset="img/logo/supergym-logo-tablet.svg">
-      <img class="header__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
-        alt="Логотип SUPERGYM">
-    </picture>
-    <a class="header__phone-link" href="tel:+78005555555">8 800 555-55-55</a>
-  </div>
+      <picture>
+        <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
+          srcset="img/logo/supergym-logo-desktop.svg">
+        <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
+          srcset="img/logo/supergym-logo-tablet.svg">
+        <img class="header__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
+          alt="Логотип SUPERGYM">
+      </picture>
+      <a class="header__phone-link" href="tel:+78005555555">8 800 555-55-55</a>
+    </div>
   </header>
 
   <main>
     <section class="hero" data-test="hero">
-      <p class="hero__location">Омск</p>
-      <h1 class="hero__title">Фитнес-центр</h1>
-      <p class="hero__text">Тренажерный зал</p>
-      <p class="hero__text">Групповые занятия</p>
-      <p class="hero__text">Кардио-зона</p>
-      <a class="hero__buy button" href="#">Купить абонемент</a>
-      <picture>
-        <source media="(min-width: 1366px)" width="500" height="524" type="image/webp"
-          srcset="img/hero/athlete-desktop@1x.webp 1x, img/hero/athlete-desktop@2x.webp 2x">
-        <source media="(min-width: 768px)" width="324" height="390" type="image/webp"
-          srcset="img/hero/athlete-tablet@1x.webp 1x, img/hero/athlete-tablet@2x.webp 2x">
+      <div class="hero__main-container">
+        <p class="hero__location">Омск</p>
+        <h1 class="hero__title">Фитнес центр</h1>
 
-        <source media="(min-width: 1366px)" width="500" height="524" type="image/jpg"
-          srcset="img/hero/athlete-desktop@1x.jpg 1x, img/hero/athlete-desktop@2x.jpg 2x">
-        <source media="(min-width: 768px)" width="324" height="390" type="image/jpg"
-          srcset="img/hero/athlete-tablet@1x.jpg 1x, img/hero/athlete-tablet@2x.jpg 2x">
-        <img class="about__image" src="#" width="100" height="100" alt="Фотография тренера">
-      </picture>
+        <div class="hero__text-container">
+          <p class="hero__text">Тренажерный зал</p>
+          <p class="hero__text">Групповые занятия</p>
+          <p class="hero__text">Кардио-зона</p>
+        </div>
+
+        <a class="hero__buy button button--primary" href="#">Купить абонемент</a>
+
+        <picture>
+          <source media="(min-width: 1366px)" width="500" height="524" type="image/webp"
+            srcset="img/hero/athlete-desktop@1x.webp 1x, img/hero/athlete-desktop@2x.webp 2x">
+          <source media="(min-width: 768px)" width="324" height="390" type="image/webp"
+            srcset="img/hero/athlete-tablet@1x.webp 1x, img/hero/athlete-tablet@2x.webp 2x">
+
+          <source media="(min-width: 1366px)" width="500" height="524" type="image/jpg"
+            srcset="img/hero/athlete-desktop@1x.jpg 1x, img/hero/athlete-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" width="324" height="390" type="image/jpg"
+            srcset="img/hero/athlete-tablet@1x.jpg 1x, img/hero/athlete-tablet@2x.jpg 2x">
+          <img class="hero__image" src="#" width="100" height="100" alt="Фотография тренера">
+        </picture>
+      </div>
     </section>
 
     <section class="about" data-test="about">
+      <div class="about__main-container">
       <h2 class="about__title">Тренажерный зал</h2>
       <p class="about__text">Просторный зал площадью 900 кв/м</p>
-      <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
-        тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
-      <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами.
-        Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
+      <div class="about__description-container">
+        <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
+          тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
+        <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами.
+          Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
+      </div>
+    </div>
       <picture>
         <source media="(min-width: 1366px)" width="660" height="400" type="image/webp"
           srcset="img/about/gym-desktop@1x.webp 1x, img/about/gym-desktop@2x.webp 2x">
@@ -68,8 +79,11 @@
           srcset="img/about/gym-mobile@2x.jpg" alt="Фотография тренажерного зала">
       </picture>
 
-      <iframe class="about__video" title="Видео о тренажерном зале"
-        src="https://www.youtube.com/watch?v=9TZXsZItgdw"></iframe>
+      <div class="about__video-container">
+        <iframe class="about__video" width="100%" height="100%" title="Видео о тренажерном зале"
+          src="https://www.youtube.com/embed/9TZXsZItgdw" frameborder="0" allowfullscreen></iframe>
+        <button class="about__play" type="button"><span class="visually-hidden">Воспроизвести</span></button>
+      </div>
     </section>
 
     <section class="price" data-test="price">
