--- a/source/index.html
+++ b/source/index.html
@@ -9,22 +9,22 @@
 </head>
 
 <body class="page-body">
-  <header class="header">
-    <div class="header-container">
-      <picture>
-        <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
-          srcset="img/logo/supergym-logo-desktop.svg">
-        <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
-          srcset="img/logo/supergym-logo-tablet.svg">
-        <img class="header__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
-          alt="Логотип SUPERGYM">
-      </picture>
-      <a class="header__phone-link" href="tel:+78005555555">8 800 555-55-55</a>
-    </div>
-  </header>
-
   <main>
     <section class="hero" data-test="hero">
+      <header class="hero__header header">
+        <div class="header-container">
+          <picture>
+            <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
+              srcset="img/logo/supergym-logo-desktop.svg">
+            <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
+              srcset="img/logo/supergym-logo-tablet.svg">
+            <img class="header__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
+              alt="Логотип SUPERGYM">
+          </picture>
+          <a class="header__phone-link" href="tel:+78005555555">8 800 555-55-55</a>
+        </div>
+      </header>
+
       <div class="hero__main-container">
         <p class="hero__location">Омск</p>
         <h1 class="hero__title">Фитнес центр</h1>
@@ -54,15 +54,16 @@
 
     <section class="about" data-test="about">
       <div class="about__main-container">
-      <h2 class="about__title">Тренажерный зал</h2>
-      <p class="about__text">Просторный зал площадью 900 кв/м</p>
-      <div class="about__description-container">
-        <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
-          тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
-        <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами.
-          Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
+        <h2 class="about__title">Тренажерный зал</h2>
+        <p class="about__text">Просторный зал площадью 900 кв/м</p>
+        <div class="about__description-container">
+          <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
+            тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.
+          </p>
+          <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами.
+            Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
+        </div>
       </div>
-    </div>
       <picture>
         <source media="(min-width: 1366px)" width="660" height="400" type="image/webp"
           srcset="img/about/gym-desktop@1x.webp 1x, img/about/gym-desktop@2x.webp 2x">
@@ -87,31 +88,33 @@
     </section>
 
     <section class="price" data-test="price">
-      <h2 class="price__title">Абонементы</h2>
-      <div class="price__tabs">
-        <ul class="price__tab-list">
-          <li class="price__tab-item price__tab-item-current">1 месяц</li>
-          <li class="price__tab-item">6 месяцев</li>
-          <li class="price__tab-item">12 месяцев</li>
-        </ul>
-        <div class="price__tab-content">
-          <div class="price__tab-content-item">
-            <h3 class="price__item-title">С тренером</h3>
-            <p class="price__item-text">13 занятий</p>
-            <p class="price__item-price">5000</p>
-            <a class="price__item-buy button" href="#">Купить абонемент</a>
-          </div>
-          <div class="price__tab-content-item">
-            <h3 class="price__item-title">Дневной</h3>
-            <p class="price__item-text">с 8:00 до 17:00</p>
-            <p class="price__item-price">1700</p>
-            <a class="price__item-buy button" href="#">Купить абонемент</a>
-          </div>
-          <div class="price__tab-content-item">
-            <h3 class="price__item-title">Полный день</h3>
-            <p class="price__item-text">с 8:00 до 22:00</p>
-            <p class="price__item-price">2700</p>
-            <a class="price__item-buy button" href="#">Купить абонемент</a>
+      <div class="price__main-container">
+        <h2 class="price__title">Абонементы</h2>
+        <div class="price__tabs">
+          <ul class="price__tab-list">
+            <li class="price__tab-item price__tab-item--current">1 месяц</li>
+            <li class="price__tab-item">6 месяцев</li>
+            <li class="price__tab-item">12 месяцев</li>
+          </ul>
+          <div class="price__tab-content">
+            <div class="price__tab-content-item">
+              <h3 class="price__item-title">С тренером</h3>
+              <p class="price__item-text">13 занятий</p>
+              <p class="price__item-price" data-price="5000">5000</p>
+              <a class="price__item-buy button button--secondary" href="#">Купить абонемент</a>
+            </div>
+            <div class="price__tab-content-item">
+              <h3 class="price__item-title">Дневной</h3>
+              <p class="price__item-text">с 8:00 до 17:00</p>
+              <p class="price__item-price" data-price="1700">1700</p>
+              <a class="price__item-buy button button--secondary" href="#">Купить абонемент</a>
+            </div>
+            <div class="price__tab-content-item">
+              <h3 class="price__item-title">Полный день</h3>
+              <p class="price__item-text">с 8:00 до 22:00</p>
+              <p class="price__item-price" data-price="2700">2700</p>
+              <a class="price__item-buy button button--secondary" href="#">Купить абонемент</a>
+            </div>
           </div>
         </div>
       </div>
@@ -444,28 +447,28 @@
 
         <button class="registration__form-send button" type="submit">Отправить</button>
       </form>
-    </section>
 
-    <section class="contacts">
-      <h2 class="contacts__title">Контакты</h2>
-      <ul class="contacts__list">
-        <li class="contacts__item">
-          <h3 class="contacts__item-title">Адрес:</h3>
-          <address class="contacts__description">г. Омск, ул. 60 лет Октября, 7</address>
-        </li>
-        <li class="contacts__item">
-          <h3 class="contacts__item-title">График работы:</h3>
-          <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
-        </li>
-        <li class="contacts__item">
-          <h3 class="contacts__item-title">Телефон:</h3>
-          <a class="contacts__description" href="tel:+78005555555">8 800 555-55-55</a>
-        </li>
-        <li class="contacts__item">
-          <h3 class="contacts__item-title">Email:</h3>
-          <a class="contacts__description" href="mailto:oмск@supergym.ru">oмск@supergym.ru</a>
-        </li>
-      </ul>
+      <section class="registration__contacts contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">Адрес:</h3>
+            <address class="contacts__description">г. Омск, ул. 60 лет Октября, 7</address>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">График работы:</h3>
+            <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">Телефон:</h3>
+            <a class="contacts__description" href="tel:+78005555555">8 800 555-55-55</a>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">Email:</h3>
+            <a class="contacts__description" href="mailto:oмск@supergym.ru">oмск@supergym.ru</a>
+          </li>
+        </ul>
+      </section>
     </section>
   </main>
 
