feat: add juri block styles (mobile, tablet, desktop), change images, add img fo juri card in markup

--- a/source/index.html
+++ b/source/index.html
@@ -168,48 +168,158 @@
       <h2 class="juri__title">Жюри</h2>
       <div class="juri__slider-container">
         <div class="juri__slider">
-          <article class="juri__card">
+          <article class="juri__card juri__card--closed">
             <h3 class="juri__name">Анна Павлова</h3>
-            <p class="juri__type">Силовые тренировки</p>
-            <ul class="juri__advantages-list">
-              <li class="juri__advantages-item">Certified Level 1 Trainer</li>
-              <li class="juri__advantages-item">Участних 3 всероссийских конкурсов по бодибилдингу</li>
-              <li class="juri__advantages-item">Опыт — 4 года</li>
-            </ul>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/anna-pavlova-photo@1x.webp 1x, img/juri/anna-pavlova-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/anna-pavlova-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/anna-pavlova-photo@2x.jpg" alt="Фотография члена жюри Анны Павловой">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">Силовые тренировки</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Certified Level 1 Trainer</li>
+                <li class="juri__advantages-item">Участних международных спортивных конкурсов</li>
+                <li class="juri__advantages-item">Опыт — 4 года</li>
+              </ul>
+            </div>
           </article>
-          <article class="juri__card">
+          <article class="juri__card juri__card--closed">
             <h3 class="juri__name">Алексей Лавров</h3>
-            <p class="juri__type">CrossFit</p>
-            <ul class="juri__advantages-list">
-              <li class="juri__advantages-item">Certified Level 3 Trainer</li>
-              <li class="juri__advantages-item">Победитель чемпионата России по CrossFit</li>
-              <li class="juri__advantages-item">Опыт — 6 лет</li>
-            </ul>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/alex-lavrov-photo@1x.webp 1x, img/juri/alex-lavrov-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/alex-lavrov-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/alex-lavrov-photo@2x.jpg" alt="Фотография члена жюри Алексея Лаврова">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">CrossFit</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Certified Level 3 Trainer</li>
+                <li class="juri__advantages-item">Победитель чемпионата России по CrossFit</li>
+                <li class="juri__advantages-item">Опыт — 6 лет</li>
+              </ul>
+            </div>
           </article>
-          <article class="juri__card">
+          <article class="juri__card juri__card--closed">
             <h3 class="juri__name">Александр Пашков</h3>
-            <p class="juri__type">Функциональные тренировки</p>
-            <ul class="juri__advantages-list">
-              <li class="juri__advantages-item">Certified Level 5 Trainer</li>
-              <li class="juri__advantages-item">Победитель чемпионата России по CrossFit, бодибилдингу</li>
-              <li class="juri__advantages-item">Опыт — 10 лет</li>
-            </ul>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/alex-pashkov-photo@1x.webp 1x, img/juri/alex-pashkov-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/alex-pashkov-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/alex-pashkov-photo@2x.jpg" alt="Фотография члена жюри Александра Пашкова">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">Функциональные тренировки</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Certified Level 5 Trainer</li>
+                <li class="juri__advantages-item">Победитель чемпионата России по CrossFit, бодибилдингу</li>
+                <li class="juri__advantages-item">Опыт — 10 лет</li>
+              </ul>
+            </div>
           </article>
-          <article class="juri__card">
+          <article class="juri__card juri__card--closed">
             <h3 class="juri__name">Мария Кетова</h3>
-            <p class="juri__type">Круговые тренировки</p>
-            <ul class="juri__advantages-list">
-              <li class="juri__advantages-item">Сертифицированный тренер, специалист по питанию</li>
-              <li class="juri__advantages-item">Разработала свой курс по домашним онлайн-тренировкам для девушек</li>
-              <li class="juri__advantages-item">Опыт — 7 лет</li>
-            </ul>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/maria-ketova-photo@1x.webp 1x, img/juri/maria-ketova-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/maria-ketova-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/maria-ketova-photo@2x.jpg" alt="Фотография члена жюри Марии Кетовой">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">Круговые тренировки</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Сертифицированный тренер, специалист по питанию</li>
+                <li class="juri__advantages-item">Разработала свой курс по домашним онлайн-тренировкам для девушек</li>
+                <li class="juri__advantages-item">Опыт — 7 лет</li>
+              </ul>
+            </div>
+          </article>
+          <article class="juri__card juri__card--closed">
+            <h3 class="juri__name">Анна Павлова</h3>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/anna-pavlova-photo@1x.webp 1x, img/juri/anna-pavlova-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/anna-pavlova-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/anna-pavlova-photo@2x.jpg" alt="Фотография члена жюри Анны Павловой">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">Силовые тренировки</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Certified Level 1 Trainer</li>
+                <li class="juri__advantages-item">Участних международных спортивных конкурсов</li>
+                <li class="juri__advantages-item">Опыт — 4 года</li>
+              </ul>
+            </div>
+          </article>
+          <article class="juri__card juri__card--closed">
+            <h3 class="juri__name">Алексей Лавров</h3>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/alex-lavrov-photo@1x.webp 1x, img/juri/alex-lavrov-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/alex-lavrov-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/alex-lavrov-photo@2x.jpg" alt="Фотография члена жюри Алексея Лаврова">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">CrossFit</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Certified Level 3 Trainer</li>
+                <li class="juri__advantages-item">Победитель чемпионата России по CrossFit</li>
+                <li class="juri__advantages-item">Опыт — 6 лет</li>
+              </ul>
+            </div>
+          </article>
+          <article class="juri__card juri__card--closed">
+            <h3 class="juri__name">Александр Пашков</h3>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/alex-pashkov-photo@1x.webp 1x, img/juri/alex-pashkov-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/alex-pashkov-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/alex-pashkov-photo@2x.jpg" alt="Фотография члена жюри Александра Пашкова">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">Функциональные тренировки</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Certified Level 5 Trainer</li>
+                <li class="juri__advantages-item">Победитель чемпионата России по CrossFit, бодибилдингу</li>
+                <li class="juri__advantages-item">Опыт — 10 лет</li>
+              </ul>
+            </div>
+          </article>
+          <article class="juri__card juri__card--closed">
+            <h3 class="juri__name">Мария Кетова</h3>
+            <picture>
+              <source width="260" height="300" type="image/webp"
+                srcset="img/juri/maria-ketova-photo@1x.webp 1x, img/juri/maria-ketova-photo@2x.webp 2x">
+
+              <img class="juri__image" src="img/juri/maria-ketova-photo@1x.jpg" width="260" height="300"
+                srcset="img/juri/maria-ketova-photo@2x.jpg" alt="Фотография члена жюри Марии Кетовой">
+            </picture>
+            <div class="juri__extra-info-container">
+              <p class="juri__type">Круговые тренировки</p>
+              <ul class="juri__advantages-list">
+                <li class="juri__advantages-item">Сертифицированный тренер, специалист по питанию</li>
+                <li class="juri__advantages-item">Разработала свой курс по домашним онлайн-тренировкам для девушек</li>
+                <li class="juri__advantages-item">Опыт — 7 лет</li>
+              </ul>
+            </div>
           </article>
         </div>
 
-        <button class="juri__prev-button" type="button" aria-label="Посмотреть предыдущий слайд"><span
-            class="visually-hidden">Назад</span></button>
-        <button class="juri__next-button" type="button" aria-label="Посмотреть следующий слайд"><span
-            class="visually-hidden">Вперед</span></button>
+        <div class="juri__buttons-container">
+          <button class="juri__button juri__button--prev" type="button" aria-label="Посмотреть предыдущий слайд"><span
+              class="visually-hidden">Назад</span></button>
+          <button class="juri__button juri__button--next" type="button" aria-label="Посмотреть следующий слайд"><span
+              class="visually-hidden">Вперед</span></button>
+        </div>
       </div>
     </section>
 
