--- a/source/index.html
+++ b/source/index.html
@@ -324,53 +324,50 @@
     </section>
 
     <section class="features" data-test="features">
-      <h2 class="features__title">Наши преимущества</h2>
-      <ul class="features__list">
-        <li>
-          <div>
-            <span>900</span>
-            <span>кв/м</span>
-          </div>
-          <h3>Площадь</h3>
-          <p>Занимайтесь без очередей и толкучки</p>
-        </li>
+      <div class="features__main-container">
+        <h2 class="features__title">Наши преимущества</h2>
+        <ul class="features__list">
+          <li>
+            <p><span>900</span> <span>кв/м</span></p>
+            <div>
+              <h3>Площадь</h3>
+              <p>Занимайтесь без очередей и толкучки</p>
+            </div>
+          </li>
 
-        <li>
-          <div>
-            <span>900</span>
-            <span>кв/м</span>
-          </div>
-          <h3>Площадь</h3>
-          <p>Занимайтесь без очередей и толкучки</p>
-        </li>
+          <li>
+            <p><span>70</span> <span>машин</span></p>
+            <div>
+              <h3>Собственная парковка</h3>
+              <p>Вы всегда найдёте место для своей машины на нашей парковке</p>
+            </div>
+          </li>
 
-        <li>
-          <div>
-            <span>100</span>
-            <span>тренажеров</span>
-          </div>
-          <h3>Много тренажеров</h3>
-          <p>Современные тренажёры на все группы мышц</p>
-        </li>
+          <li>
+            <p><span>100</span> <span>Тренажёров</span></p>
+            <div>
+              <h3 class="visually-hidden">Много тренажеров</h3>
+              <p>Современные тренажёры на все группы мышц</p>
+            </div>
+          </li>
 
-        <li>
-          <div>
-            <span>350</span>
-            <span>мест</span>
-          </div>
-          <h3>Комфорт</h3>
-          <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
-        </li>
+          <li>
+            <p><span>350</span> <span>мест</span></p>
+            <div>
+              <h3>Комфорт</h3>
+              <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+            </div>
+          </li>
 
-        <li>
-          <div>
-            <span>5+</span>
-            <span>лет</span>
-          </div>
-          <h3>Тренерский опыт</h3>
-          <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
-        </li>
-      </ul>
+          <li>
+            <p><span>5+</span><span>лет</span></p>
+            <div>
+              <h3>Тренерский опыт</h3>
+              <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="offers" data-test="offers">
