feat: add offers block styles (mobila, tablet, desktop)

--- a/source/index.html
+++ b/source/index.html
@@ -372,15 +372,14 @@
 
     <section class="offers" data-test="offers">
       <h2 class="offers__title">Акции</h2>
-      <article class="offers__main-card">
+      <article class="offers__card offers__card--main">
         <div class="offers__container">
-          <div class="offers__text-container">
-            <h3>Год <span>4999</span></h3>
-            <p>Безлимитный абонемент в тренажёрный зал</p>
+          <h3>Год <span>4999</span></h3>
+          <p>Безлимитный абонемент в тренажёрный зал</p>
+          <div>
+            <a class="offers__details button-no-borders button-no-borders--primary" href="#">Подробнее</a>
           </div>
-          <a class="offers__details offers__main-card-details" href="#">Подробнее</a>
         </div>
-
         <picture>
           <source media="(min-width: 1366px)" width="280" height="460" type="image/webp"
             srcset="img/offers/girl-desktop@1x.webp 1x, img/offers/girl-desktop@2x.webp 2x">
@@ -399,19 +398,17 @@
       </article>
 
       <article class="offers__card">
-        <div class="offers__text-container">
-          <h3>Месяц бесплатно</h3>
-          <p>Приведи друга, получи абонемент в подарок</p>
-        </div>
-        <a class="offers__details" href="#">Подробнее</a>
+        <h3>Месяц бесплатно</h3>
+        <p>Приведи друга, получи абонемент в подарок</p>
+        <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
       </article>
 
       <article class="offers__card">
-        <div class="offers__text-container">
-          <h3>Скидка 20%</h3>
-          <p>Корпоративный фитнес с командой</p>
-        </div>
-        <a class="offers__details" href="#">Подробнее</a>
+
+        <h3>Скидка 20%</h3>
+        <p>Корпоративный фитнес с командой</p>
+
+        <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
       </article>
     </section>
 
