feat: add faq block styles (mobile, tablet, desktop) + add switch tabs JS

--- a/source/index.html
+++ b/source/index.html
@@ -415,102 +415,120 @@
     <section class="faq" data-test="faq">
       <h2 class="faq__title">Вопросы и ответы</h2>
       <div class="faq__tabs">
-        <ul class="faq__tab-list">
-          <li class="faq__tab-item active" data-tab="tab1">Центр</li>
-          <li class="faq__tab-item" data-tab="tab2">Абонемент</li>
-          <li class="faq__tab-item" data-tab="tab3">Услуги</li>
-          <li class="faq__tab-item" data-tab="tab4">Правила</li>
-        </ul>
+        <div class="faq__buttons-container">
+          <button class="faq__tab-button faq__tab-button--active" type="button" data-tab="tab1">Центр</button>
+          <button class="faq__tab-button" type="button" data-tab="tab2">Абонемент</button>
+          <button class="faq__tab-button" type="button" data-tab="tab3">Услуги</button>
+          <button class="faq__tab-button" type="button" data-tab="tab4">Правила</button>
+        </div>
+
         <div class="faq__tab-content">
-          <div class="faq__tab-pane active" id="tab1">
-            <details open>
-              <summary>Как стать членом фитнес-центра?</summary>
-              <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать
-                договор. При покупке
-                абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
-            </details>
-            <details>
-              <summary>Где можно посмотреть расписание?</summary>
-              <p>Вы можете ознакомиться с расписание на стойке информации, на нашем официальном
-                сайте.
-                Так же есть
-                возможность оформить подписку на наши новости и получать расписание и обновления на почту каждую неделю.
+          <div class="faq__tab-pane faq__tab-pane--active" id="tab1">
+            <div class="faq__tab-item faq__tab-item--active">
+              <h3>Как стать членом фитнес-центра?</h3>
+              <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке
+                абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.
               </p>
-            </details>
-            <details>
-              <summary>Есть кулеры в центре? Предоставляются полотенца?</summary>
-              <p>ллл</p>
-            </details>
-            <details>
-              <summary>Сколько тренеров работает в клубе и какова их квалификация?</summary>
-              <p>ююю</p>
-            </details>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Где можно посмотреть расписание?</h3>
+              <p>Вы можете ознакомиться с расписание на стойке информации, на нашем официальном
+                сайте. Так же есть возможность оформить подписку на наши новости и получать расписание и обновления на
+                почту каждую неделю.
+              </p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Есть кулеры в центре? Предоставляются полотенца?</h3>
+              <p>В центре есть несколько кулеров. Полотенца предоставляются и входят в стоимость
+                абонемента.
+              </p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Сколько тренеров работает в клубе и какова их квалификация?</h3>
+              <p>В нашем центре работает 15 тренеров, которые специализируются на разных направлениях. Все тренеры
+                сертифицированы, проходят регулярное обучение.</p>
+            </div>
           </div>
-          <div class="tab-pane" id="tab2">
-            <details open>
-              <summary>Занятия с тренером входят в абонемент?</summary>
+
+          <div class="faq__tab-pane" id="tab2">
+            <div class="faq__tab-item faq__tab-item--active">
+              <h3>Занятия с тренером входят в абонемент?</h3>
               <p>При посещении тренажерного зала вам необходимо оплатить занятия с тренером
                 отдельно.
                 В зале всегда присутствует дежурный тренер, которому можно задать вопрос, получить небольшую
                 консультацию
                 по тренажеру или технике выполнения упражнения.</p>
-            </details>
-            <details>
-              <summary>Можно ли заморозить абонемент?</summary>
-              <p>ююю</p>
-            </details>
-            <details>
-              <summary>Есть ли лимит по посещениям тренажерного зала и групповых занятий?
-              </summary>
-              <p>ллл</p>
-            </details>
-            <details>
-              <summary>Что такое семейный доступ и доступ для друзей?</summary>
-              <p>ююю</p>
-            </details>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Можно ли заморозить абонемент?</h3>
+              <p>Да, опция заморозки доступна и зависит от типа приоретенного абонемента.</p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Есть ли лимит по посещениям тренажерного зала и групповых занятий?</h3>
+              <p>Лимит отсутствует. Занимайтесь на здоровье!</p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Что такое семейный доступ и доступ для друзей?</h3>
+              <p>ааааа</p>
+            </div>
           </div>
-          <div class="tab-pane" id="tab3">
-            <details open>
-              <summary>Предлагает ли клуб услуги по консультированию по вопросам питания?
-              </summary>
+
+          <div class="faq__tab-pane" id="tab3">
+            <div class="faq__tab-item faq__tab-item--active">
+              <h3>Предлагает ли клуб услуги по консультированию по вопросам питания?</h3>
               <p>Да. Вы можете обратиться как к своему тренеру, так и к нашему нутрициологу.
                 Специалист уточнит ваши данные, цели и предложит программу питания.</p>
-            </details>
-            <details>
-              <summary>Проводятся ли в клубе какие-либо мероприятия  или соревнования?</summary>
-              <p>ююю</p>
-            </details>
-            <details>
-              <summary>Можно ли приобрести в центре спортивное питание?</summary>
-              <p>ллл</p>
-            </details>
-            <details>
-              <summary>Есть ли в центре детская комната?</summary>
-              <p>ююю</p>
-            </details>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Проводятся ли в клубе какие-либо мероприятия  или соревнования?</h3>
+              <p>Да. Вся информация доступна на сайте, также можно узнать о проводимых мероприятиях у менеджера при
+                входе в фитнес-зал.</p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Можно ли приобрести в центре спортивное питание?</h3>
+              <p>Да. В Центре работает магазин спортивного питания. Находится на 1 этаже при входе.</p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Есть ли в центре детская комната?</h3>
+              <p>Да.</p>
+            </div>
           </div>
-          <div class="tab-pane" id="tab4">
-            <details open>
-              <summary>Есть в фитнес-центре дресс-код?</summary>
+
+          <div class="faq__tab-pane" id="tab4">
+            <div class="faq__tab-item faq__tab-item--active">
+              <h3>Есть в фитнес-центре дресс-код?</h3>
               <p>Для тренировок необходимо иметь предназначенную для этого закрытую спортивную обувь
                 и
                 одежду. Верхняя и нижняя части тела должны быть закрыты (используйте футболки, майки, спортивные брюки,
                 шорты, кроссовки). В целях безопасности, запрещается тренироваться босиком, в пляжных или домашних
                 тапочках и т. п., исключения составляют специальные классы (например, йога, пилатес).</p>
-            </details>
-            <details>
-              <summary>Можно ли приводить с собой детей на тренировки?</summary>
-              <p>ююю</p>
-            </details>
-            <details>
-              <summary>Какие дополнительные правила посещения центра?</summary>
-              <p>ллл</p>
-            </details>
-            <details>
-              <summary>Нужна ли медицинская справка для посещения залов и бассейна?</summary>
-              <p>ююю</p>
-            </details>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Можно ли приводить с собой детей на тренировки?</h3>
+              <p>Можно приводить детей только на специальные занятия, которые проводятся совместно с детьми.</p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Какие дополнительные правила посещения центра?</h3>
+              <p>аллал</p>
+            </div>
+
+            <div class="faq__tab-item">
+              <h3>Нужна ли медицинская справка для посещения залов и бассейна?</h3>
+              <p>Для посещения зала справка не нужна, а для посещения бассейна - обязательна.</p>
+            </div>
           </div>
+
         </div>
       </div>
     </section>
